# intern

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  app.js  package-lock.json  package.json
cpp_scoring/: CMakeLists.txt  Dockerfile
cpp_scoring/src/: main.cpp
ml_parser/: Dockerfile  app.py
sql/: schema.sql
